# instruments.js

./: .gitignore  AGENTS.md  LICENSE-MIT  PRINCIPLES.md  README.md  package-lock.json  package.json
.claude/: TODO-2026-07-11.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  pages.yml
agentic-docs/: licensing.md
agentic-docs/design/: 2026-07-12-acoustic-drum-reference-corpus-v2.md  2026-07-12-instrument-controls.md  2026-07-13-higher-capacity-piano.md  2026-07-13-string-and-horn-families.md
agentic-docs/personas/: yotam.md
agentic-docs/reports/: 2026-07-12-loop-l3-diagnostics.md  2026-07-12-loop-l4-listening-evidence.md
apps/playground/: demo-song.mjs  demos.mjs  index.html  showcase.html
crates/dsp/: Cargo.toml
crates/dsp/src/: kernels.rs  lib.rs
demos/bundler-matrix/: README.md
demos/customer-zero/: MidiPlayer.tsx  README.md
evals/: README.md  reference-manifest-schema-v2.json  reference-manifest.json  reference-receipt-schema-v1.json
evals/cases/: bass.json  drums-jazz.json  drums.json  guitars.json  iteration-schema-v1.json  piano.json  schema-v1.json
evals/listening/: analysis-manifest-schema-v1.json  app.js  experiment-schema-v1.json  index.html  randomization.js  session-schema-v1.json  style.css
evals/metrics/: report-schema-v1.json
evals/transport/: no-control-baseline-v1.json  no-control-cases-v1.json  no-control-contract-v1.json
scripts/audit/: harness_audit.py  listening-evidence-audit.sh
scripts/dev/: ab-page.mjs  bench-soundboard.mjs  compare.py  e2e-check.mjs  generate_listening_pilot.py  listening-e2e.mjs  (+16 more)
(+26 files in other folders)
