[package]
name = "instruments-dsp"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "physical-instruments.js DSP core: SoA voice engine, physical-modeling kernels, track buses"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Off by default: adds measurement-only exports, never part of the shipped wasm.
bench-scaffold = []
